# openst

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  environment.yaml  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  wiki-related.md
.github/PULL_REQUEST_TEMPLATE/: bug-fix.md  new-feature.md  wiki-related.md
.github/workflows/: docker_hub.yml  docs.yml
api/: index.html
benchmark/: spatial_mapping.ipynb  utils.py
computational/generate_expression_matrix/: index.html
computational/getting_started/: index.html
computational/pairwise_alignment/: index.html
computational/preprocessing_imaging/: index.html
computational/preprocessing_sequencing/: index.html
computational/threed_reconstruction/: index.html
docs/: api.md  faq.md  index.md  introduction.md
docs/computational/: from_spacemake.md  generate_expression_matrix.md  getting_started.md  pairwise_alignment.md  preprocessing_capture_area.md  preprocessing_imaging.md  preprocessing_openst_library.md  preprocessing_sequencing.md  segmentation.md
docs/examples/: datasets.md  getting_started.md
docs/examples/adult_mouse/: generate_expression_matrix.md  introduction.md  pairwise_alignment.md  preprocessing_imaging.md  preprocessing_sequencing.md
docs/examples/e13_brain/: preprocessing_sequencing.md
docs/examples/e13_mouse/: generate_expression_matrix.md  introduction.md  pairwise_alignment.md  preprocessing_imaging.md  preprocessing_sequencing.md
docs/examples/human_metastatic/: 0_environment.ipynb  1_spacemake.ipynb  2_openst.ipynb  3_stim.ipynb  introduction.md
docs/experimental/: capture_area_generation.md  capture_area_generation_with_3d_viewer.ipynb  getting_started.md  library_preparation.md  sequencing_of_openst_library.md  tissue_processing_and_RNA_qc.md
docs/javascripts/: katex.js
docs/static/video/: openst_docker_gui.webm
docs/stylesheets/: extra.css
docs/theme_override_home/: home.html  main.html
examples/: benchmark.yaml  example_workflow.sh
examples/adult_mouse/generate_expression_matrix/: index.html
examples/adult_mouse/introduction/: index.html
examples/adult_mouse/pairwise_alignment/: index.html
examples/adult_mouse/preprocessing_imaging/: index.html
examples/adult_mouse/preprocessing_sequencing/: index.html
examples/getting_started/: index.html
examples/metastatic_lymph_node/: 3_interactive_refinement.ipynb  metadata_procesing.ipynb  run_alignment.ipynb  run_pipeline.sh
examples/pairwise_alignment/: 1_stitch_for_alignment.sh  2A_pairwise_alignment.sh  2B_pairwise_alignment.sh  pairwise_alignment.ipynb
examples/pairwise_alignment_lymph_node/: 1_pairwise_alignment.sh  pairwise_alignment.ipynb
experimental/capture_area_generation/: index.html
experimental/getting_started/: index.html
experimental/library_preparation/: index.html
experimental/sequencing_of_openst_library/: index.html
experimental/tissue_processing_and_RNA_qc/: index.html
faq/: index.html
introduction/: index.html
main/: 404.html  index.html  sitemap.xml
main/api/: index.html
main/computational/from_spacemake/: index.html
main/computational/generate_expression_matrix/: index.html
main/computational/getting_started/: index.html
main/computational/pairwise_alignment/: index.html
main/computational/preprocessing_capture_area/: index.html
main/computational/preprocessing_imaging/: index.html
main/computational/preprocessing_openst_library/: index.html
main/computational/preprocessing_sequencing/: index.html
main/computational/threed_reconstruction/: index.html
main/examples/datasets/: index.html
main/examples/getting_started/: index.html
main/experimental/: 3d_viewer_capture_area.html
main/experimental/capture_area_generation/: index.html
main/experimental/getting_started/: index.html
main/experimental/library_preparation/: index.html
main/experimental/sequencing_of_openst_library/: index.html
main/experimental/tissue_processing_and_RNA_qc/: index.html
main/faq/: index.html
main/introduction/: index.html
main/search/: search_index.json
main/static/metadata_files/: NovaSeq6000_S4_barcoding_seq_recipe.xml
main/static/resources/: openst_cutting_guide_3D_design.stl
main/static/video/: openst_intro.webm
main/stylesheets/: extra.css
main/theme_override_home/: home.html
openst/: __init__.py  __main__.py  cli.py
openst.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
openst/alignment/: __init__.py  apply_transform.py  feature_matching.py  fiducial_detection.py  manual_pairwise_aligner.py  manual_pairwise_aligner_gui.py  pairwise_aligner.py  transcript_assign.py  transformation.py
openst/metadata/: __init__.py  example_json.json  report.py
openst/metadata/classes/: __init__.py  base.py  pairwise_alignment.py  segmentation.py
openst/metadata/templates/: pairwise_alignment.html
openst/preprocessing/: __init__.py  auto_stitch.py  auto_stitch_macro.ijm  barcode_preprocessing.py  flowcell_map.py  image_preprocess.py  image_stitch.py  merge_modalities.py  puck_collection.py  spatial_stitch.py
openst/preprocessing/CUT/: README.md
openst/preprocessing/imagej_macros/: axio_stitch.ijm  keyence_stitch.ijm
openst/segmentation/: __init__.py  segment.py  segment_merge.py  segment_wsi_by_tile.py
openst/threed/: __init__.py  from_3d_registration.py  to_3d_registration.py
openst/utils/: __init__.py  file.py  from_spacemake.py  pimage.py  points.py  preview.py  pseudoimage.py  spacemake.py
openst/utils/cpselect/: __init__.py  cpselect.py
openst_wiki/: mkdocs.yml
openst_wiki/docs/: about.md  api.md  computational.md  experimental.md  faq.md  index.md
search/: search_index.json
src/alignment/: __init__.py  feature_matching.py  pairwise_aligner.py  pairwise_aligner_with_logging.py
src/utils/: image_preprocessor.py  reporter.py
theme_override_home/: home.html
(+40 files in other folders)
