[metadata]
name = openst
version = 0.1.0
author = Daniel León-Periñán, Lena Marie Schott, Nikolaos Karaiskos
author_email = daniel.leonperinan@mdc-berlin.de, marie.schott@mdc-berlin.de, nikolaos.karaiskos@mdc-berlin.de
description = Democratizing spatial transcriptomics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rajewsky-lab/openst
project_urls =
    Bug Tracker = https://github.com/rajewsky-lab/openst/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
license = GPL

[options]
zip_safe = False
python_requires = >=3.6
include_package_data = True
package_dir =
    openst = openst
packages = openst

[options.entry_points]
console_scripts = 
    openst = openst.__main__:run_openst


    package_data={'': ['openst/metadata/templates/*.html', '*/templates/*.html', 'openst/preprocessing/imagej_macros/*.ijm', '*/preprocessing/imagej_macros/*.ijm']},
    include_package_data=True,